# HRI_2023_grp2

./: .gitmodules  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/ar_tag_tracker/: CMakeLists.txt
src/ar_tag_tracker/config/: conf.rviz
src/ar_tag_tracker/launch/: camera.launch  test.launch  test2.launch
src/ar_tag_tracker/src/: ar_tag_tracker.cpp  follow_tag.cpp
src/hazard_bot/: CMakeLists.txt  package.xml
src/hazard_bot/config/: config.rviz
src/hazard_bot/launch/: start.launch
src/hazard_bot/src/: mover.cpp
src/main/: CMakeLists.txt
src/main_temoto_config/main_temoto_config/: CMakeLists.txt  package.xml
src/main_temoto_config/main_temoto_config/launch/: action_assistant.launch  temoto.launch
src/main_temoto_config/main_temoto_config/src/: main_cmi_client.cpp  main_pmi_client.cpp  main_robot_manager.cpp
src/main_temoto_config/temoto_actions/ta_do_hri_action/: CMakeLists.txt  package.xml  umrf.json
src/main_temoto_config/temoto_actions/ta_wait_for_tag/: CMakeLists.txt  package.xml  umrf.json
src/main_temoto_config/umrf_graphs/: umrf_graph_0.umrfg.json
src/movement/: CMakeLists.txt  package.xml
src/movement/src/: move_to_center.cpp  move_with_tracking.cpp
src/testing_temoto_config/temoto_actions/ta_initialzierobotont/: CMakeLists.txt  package.xml  umrf.json
src/testing_temoto_config/temoto_actions/ta_sendmovecmd/: CMakeLists.txt  package.xml  (+1 more)
src/testing_temoto_config/testing_temoto_config/: CMakeLists.txt  package.xml
src/testing_temoto_config/umrf_graphs/: send_move_cmd.umrfg.json  testing_init_robotont.umrfg.json
src/tts/: CMakeLists.txt  package.xml
src/tts/scripts/: tts_elevenlabs_example.py  tts_gtts_example.py  tts_node.py
(+19 files in other folders)
